src/test/errors/frameErr.hhl
/*
    A test case for errors caused by a frame statement which may not hold.
    Output:
        Verification failed
        [Frame] The following hyper assertion used in a frame might not hold:
        forall <_s: State> :: ((<_s>) ==> (false))
*/

method frameErr() returns (out: Int)
    requires exists <_s> :: true
    ensures exists <_s> :: _s[out] == 2
{
    frame forall <_s> :: false {
        out := 2
    }
}

